--- a/mvvmkt/build.gradle
+++ b/mvvmkt/build.gradle
@@ -40,14 +40,19 @@ dependencies {
     api fileTree(dir: "libs", include: ["*.jar", "*.aar"])
 
     implementation 'androidx.core:core-ktx:1.9.0'
+
+    //androidx UI
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
+    //test
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    //dialog
     implementation "com.afollestad.material-dialogs:lifecycle:3.3.0"
     implementation "com.afollestad.material-dialogs:core:3.3.0"
     implementation "com.afollestad.material-dialogs:color:3.3.0"
@@ -60,16 +65,17 @@ dependencies {
     api 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     //viewModel
     api "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
-    api "androidx.fragment:fragment-ktx:1.5.4"
     //liveData
     api "androidx.lifecycle:lifecycle-livedata-ktx:2.6.1"
+
     //防止数据倒灌livedata
     api 'com.kunminx.arch:unpeek-livedata:7.8.0'
-
 
     //navigation
     api 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     api 'androidx.navigation:navigation-ui-ktx:2.5.3'
+    api "androidx.fragment:fragment-ktx:1.5.4"
+
     //retrofit
     api "com.squareup.retrofit2:retrofit:2.9.0"
     api "com.squareup.retrofit2:converter-gson:2.9.0"
@@ -77,13 +83,11 @@ dependencies {
 
     //动态替换BaseUrl库 使用可参考 https://github.com/JessYanCoding/RetrofitUrlManager
     api 'me.jessyan:retrofit-url-manager:1.4.0'
-
+    //腾讯MMKV 代替SP
     api 'com.tencent:mmkv:1.0.22'
-
     //BaseAdapter
-    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4'
+    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4'
     //指示器库
-    implementation 'com.github.hackware1993:MagicIndicator:1.7.0'
-    //底部bottomBar
-    implementation 'com.github.ittianyu:BottomNavigationViewEx:2.0.4'
+    api 'com.github.hackware1993:MagicIndicator:1.7.0'
+
 }
