添加多渠道打包。添加日志窗。

--- a/mvvmkt/src/main/AndroidManifest.xml
+++ b/mvvmkt/src/main/AndroidManifest.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
         <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-        <application>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
+    <application>
             <provider
                 android:authorities="${applicationId}.KtxInstaller"
                 android:name="com.zoo.mvvmkt.util.Ktx"
