--- a/settings.gradle
+++ b/settings.gradle
@@ -8,6 +8,18 @@ pluginManagement {
 }
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    versionCatalogs {
+        libs {
+            alias('core-ktx').to('androidx.core', 'core-ktx').version('1.9.0')
+            alias('appcompat').to('androidx.appcompat', 'appcompat').version('1.6.1')
+            alias('material').to('com.google.android.material', 'material').version('1.9.0')
+            alias('constraintlayout').to('androidx.constraintlayout', 'constraintlayout').version('2.1.4')
+            alias('swiperefreshlayout').to('androidx.swiperefreshlayout', 'swiperefreshlayout').version('1.1.0')
+            alias('junit').to('junit', 'junit').version('4.13.2')
+            alias('ext-junit').to('androidx.test.ext', 'junit').version('1.1.5')
+            alias('espresso-core').to('androidx.test.espresso', 'espresso-core').version('3.5.1')
+        }
+    }
     repositories {
         maven { url 'https://maven.aliyun.com/repository/central' }
         maven { url 'https://jitpack.io' }
