--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!-- Android11额外添加  运行管理所有文件 -->
+    <uses-permission
+        android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
+    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
+    <uses-permission android:name="android.permission.MANAGE_UNKNOWN_APP_SOURCES" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -14,6 +26,17 @@
         android:theme="@style/Theme.AProjectKt"
         tools:replace="android:label"
         tools:targetApi="31">
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${provider_authorities}"
+            android:exported="false"
+            android:grantUriPermissions="true"
+            tools:ignore="WrongManifestParent">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
         <activity
             android:name=".activity.SplashActivity"
             android:exported="true">
@@ -23,9 +46,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.zoo.xxx.activity.MainActivity"
-            android:launchMode="singleTask"
-            />
+        <activity
+            android:name="com.zoo.xxx.activity.MainActivity"
+            android:launchMode="singleTask" />
         <activity android:name="com.zoo.xxx.activity.LoginActivity" />
     </application>
 
